# Visual3_2310010459

./: Baya.py  Baya.ui  DataAdmin.py  DataAdmin.ui  DataKeluarga.py  DataKeluarga.ui  DataPekerja.py  DataPekerja.ui  DataUsaha.py  DataUsaha.ui  Kesejahteraan.py  Kesejahteraan.ui  Pendampingan.py  Pendampingan.ui  README.md  Resiko.py  Resiko.ui  crudDB.py  form.ui  mainwindow.py  pyproject.toml  ui_Baya.py  ui_DataAdmin.py  ui_DataKeluarga.py  ui_DataPekerja.py  ui_DataUsaha.py  ui_Kesejahteraan.py  ui_Pendampingan.py  ui_Resiko.py  ui_form.py
artikel dan database/: visual3_2310010459.sql
